# maternal-health-assistant

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  query.py  render.yaml  requirements-dev.txt  requirements.txt  versions.json
.github/workflows/: ci.yml  deploy.yml  eval.yml
app/: main.py
data/: web_ingestion_manifest.json
data/chroma_db/fa67ddaa-18ba-4c01-b504-496ca5e6f317/: index_metadata.pickle
evaluation/: eval_dataset.jsonl  retrieval_metrics.py  run_ragas.py
evaluation/reports/: free_metrics_report_20260516_093723.json  free_metrics_report_20260516_093723.txt
frontend/: index.html  streamlit_app.py  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInput.jsx  ChatWindow.jsx  Citations.jsx  Footer.jsx  Message.jsx  MessageList.jsx  Navbar.jsx
frontend/src/hooks/: useChat.js
frontend/src/pages/: ChatPage.jsx  FAQPage.jsx  HomePage.jsx
frontend/src/services/: api.js
ingestion/: build_chroma.py  chunk_text.py  embed_store.py  enrich_metadata.py  load_pdfs.py  run_ingestion.py  scrape_web.py  validate_chunks.py
safety/: __init__.py  emergency_classifier.py  emergency_responses.py  input_filter.py  output_validator.py
scripts/: promote_release.ps1  reingest.ps1
tests/: test_api.py  test_chunk_text.py  test_load_pdfs.py  test_retrieval.py  test_safety.py
